# tree-sitter-lutaml

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.adoc  Makefile  Package.swift  README.adoc  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-lutaml.pc.in
bindings/c/tree_sitter/: tree-sitter-lutaml.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lutaml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLutamlTests/: TreeSitterLutamlTests.swift
bindings/zig/: root.zig
corpus/: class_association.txtt  class_fields.txtt  comments.txtt  concept_diagram.txtt  data_types.txtt  definitions.txtt  everything.txtt  includes.txtt  tests.txtt
examples/: diagram_blank_definion.lutaml  diagram_comments.lutaml
queries/: highlights.scm  indents.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
test/highlight/: class_association.lutaml  comments.lutaml  everything.lutaml
