[package]
name = "tree-sitter-lutaml"
description = "LutaML grammar for tree-sitter"
version = "0.1.0"
authors = [
  "Jeffrey Lau <jeffrey.lau@ribose.com>",
]
license = "MIT"
readme = "README.adoc"
keywords = ["incremental", "parsing", "tree-sitter", "lutaml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/lutaml/tree-sitter-lutaml"
edition = "2021"
autoexample = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE.adoc",
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
